fixed docs issue
