# src/controllers/index.controller.ts
@@ -5,6 +5,7 @@ import userRouter from './user/user.controller'
 import { HttpStatus, OK } from 'http-status'
 import asyncHandler from '../utils/router.methods'
 import { ActuatorHealth } from '../../health/actuator.health'
+import { scrapRouter } from './scrap/scrap.controller'
 
 const rootRouter = Router({ mergeParams: true })
 
@@ -14,13 +15,13 @@ rootRouter.get(
     '/',
     asyncHandler(async (req, res) => {
     /*
-                                #swagger.tags = ['App']
-                            #swagger.description = 'App Home.'
-                    
-                                #swagger.responses[200] = {
-                                    data: 'App Home.',
-                                }
-                                */
+                                    #swagger.tags = ['App']
+                                #swagger.description = 'App Home.'
+                        
+                                    #swagger.responses[200] = {
+                                        data: 'App Home.',
+                                    }
+                                    */
         return globalResponseHandler(
             req,
             res,
@@ -33,5 +34,6 @@ rootRouter.get(
 
 rootRouter.use(ActuatorHealth)
 rootRouter.use('/users', userRouter)
+rootRouter.use('/scrap', scrapRouter)
 
 export default rootRouter
